--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.18.1",
+    "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
