--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_BACKEND_API=http://localhost:5000
+# NEXT_PUBLIC_BACKEND_API=http://192.168.1.4:5000
+
+NEXT_PUBLIC_BACKEND_API=https://13.48.254.203:3000
