--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-# NEXT_PUBLIC_BACKEND_API=http://192.168.1.4:5000
+NEXT_PUBLIC_BACKEND_API=http://localhost:5000
+# NEXT_PUBLIC_BACKEND_API=http://127.0.0.1:5000
 
-NEXT_PUBLIC_BACKEND_API=https://13.48.254.203:3000
+# NEXT_PUBLIC_BACKEND_API=https://13.48.254.203:3000
